jvimalprasathdev/src/objects/Scheduler__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_ID__c</fullName>
        <label>Current User ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Name__c</fullName>
        <label>Current User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Assigned__c</fullName>
        <label>Last Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Limit__c</fullName>
        <label>Lead Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_User_Id__c</fullName>
        <label>Next User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_User_Name__c</fullName>
        <label>Next User Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queue Name</label>
        <referenceTo>RRB_Queue_Matrix__c</referenceTo>
        <relationshipLabel>Schedulers</relationshipLabel>
        <relationshipName>Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Proficiency_Level__c</fullName>
        <description>To fetch value from Queue Members.</description>
        <label>Current User Proficiency Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scheduler</label>
    <nameField>
        <label>Scheduler Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>